PREAPPS-296 Fix: css alignment and string localisation

--- a/src/components/calendar-add-event/style.less
+++ b/src/components/calendar-add-event/style.less
@@ -95,17 +95,13 @@
 }
 
 .wrapper {
-	display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    height: 100%;
-    overflow: auto;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: 100%;
 
 	.header {
 		border-bottom: 1px solid @gray-lighter;
